--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,1 +1,4 @@
-@tailwind base; @tailwind components; @tailwind utilities;
+/* web/src/index.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
